tests/snapshots/lexer/deploy_ps1.snap
---
source: tests/lexer_golden.rs
expression: comments
---
- line: 1
  end_line: 1
  kind: line
  marker: "#"
  own_line: true
  indent: ""
  raw: "# 2026-09-24: dated"
  text: "2026-09-24: dated"
- line: 2
  end_line: 3
  kind: block
  marker: "<#"
  own_line: true
  indent: ""
  raw: "<# block\ncomment #>"
  text: "block\ncomment"
- line: 4
  end_line: 4
  kind: line
  marker: "#"
  own_line: false
  indent: ""
  raw: "# trailing"
  text: trailing
