tests/snapshots/lexer/icon_svg.snap
---
source: tests/lexer_golden.rs
expression: comments
---
- line: 1
  end_line: 1
  kind: block
  marker: "<!--"
  own_line: false
  indent: ""
  raw: "<!-- 2026-09-24: dated -->"
  text: "2026-09-24: dated"
- line: 1
  end_line: 1
  kind: block
  marker: "<!--"
  own_line: false
  indent: ""
  raw: "<!-- undated -->"
  text: undated
