tests/snapshots/lexer/run_sh.snap
---
source: tests/lexer_golden.rs
expression: comments
---
- line: 1
  end_line: 1
  kind: line
  marker: "#!"
  own_line: true
  indent: ""
  raw: "#!/usr/bin/env bash"
  text: /usr/bin/env bash
- line: 2
  end_line: 2
  kind: line
  marker: "#"
  own_line: true
  indent: ""
  raw: "# 2026-09-24: dated"
  text: "2026-09-24: dated"
- line: 4
  end_line: 4
  kind: line
  marker: "#"
  own_line: false
  indent: ""
  raw: "# trailing"
  text: trailing
- line: 5
  end_line: 5
  kind: line
  marker: "#"
  own_line: false
  indent: ""
  raw: "# after parameter expansion"
  text: after parameter expansion
